--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
               </h2>
               <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
                 <div class="inline-flex rounded-md shadow">
-                  <a href="/detection-face/index.html" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
-                    Detection de la main
+                  <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                    Voir dossier "detection-hand" (fait avec react)
                   </a>
                 </div>
                 <div class="ml-3 inline-flex rounded-md shadow">
